Task 209168 fix: Resolve PR components

--- a/src/app/configurable-appliance/components/config-app/story-list/add-or-edit-story/add-or-edit-story.component.html
+++ b/src/app/configurable-appliance/components/config-app/story-list/add-or-edit-story/add-or-edit-story.component.html
@@ -89,7 +89,7 @@
     </div>
     <div class="p-col-12 p-md-6 p-lg-4 p-xl-3 p-button-container">
       <button
-        (click)="saveOrg('Add')"
+        (click)="addOrEditStory('Add')"
         pButton
         pRipple
         label="{{ 'Submit' }}"
@@ -172,7 +172,7 @@
     </div>
     <div class="p-col-12 p-md-6 p-lg-4 p-xl-3 p-button-container">
       <button
-        (click)="saveOrg('Edit')"
+        (click)="addOrEditStory('Edit')"
         pButton
         pRipple
         label="{{ 'Submit' }}"
