--- a/src/app/configurable-appliance/components/config-app/story-list/add-sentence-for-story/add-sentence-for-story.component.html
+++ b/src/app/configurable-appliance/components/config-app/story-list/add-sentence-for-story/add-sentence-for-story.component.html
@@ -74,7 +74,7 @@
                 <p-fileUpload
                 #fubauto
                 mode="basic"
-                name="demo[]"
+                name="configurable-appliance[]"
                 accept="audio/*"
                 maxFileSize="1000000"
                 (onUpload)="onAudioUpload($event)"
@@ -85,7 +85,7 @@
                 <p-fileUpload
                     #fubauto
                     mode="basic"
-                    name="demo[]"
+                    name="configurable-appliance[]"
                     accept="image/*"
                     maxFileSize="1000000"
                     (onUpload)="onBasicUploadAuto($event)"
@@ -100,7 +100,7 @@
                 <p-fileUpload
                   #fubauto
                   mode="basic"
-                  name="demo[]"
+                  name="configurable-appliance[]"
                   accept="image/*"
                   maxFileSize="1000000"
                   (onUpload)="onBasicUploadAuto($event)"
@@ -212,7 +212,7 @@
                 <p-fileUpload
                 #fubauto
                 mode="basic"
-                name="demo[]"
+                name="configurable-appliance[]"
                 accept="audio/*"
                 maxFileSize="1000000"
                 (onUpload)="onAudioUpload($event)"
@@ -223,7 +223,7 @@
                 <p-fileUpload
                     #fubauto
                     mode="basic"
-                    name="demo[]"
+                    name="configurable-appliance[]"
                     accept="image/*"
                     maxFileSize="1000000"
                     (onUpload)="onBasicUploadAuto($event)"
@@ -238,7 +238,7 @@
                 <p-fileUpload
                   #fubauto
                   mode="basic"
-                  name="demo[]"
+                  name="configurable-appliance[]"
                   accept="image/*"
                   maxFileSize="1000000"
                   (onUpload)="onBasicUploadAuto($event)"
