--- a/src/app/configurable-appliance/components/config-app/word-sentence/add-word-sentences/add-word-sentences.component.html
+++ b/src/app/configurable-appliance/components/config-app/word-sentence/add-word-sentences/add-word-sentences.component.html
@@ -181,7 +181,7 @@
                 <p-fileUpload
                 #fubauto
                 mode="basic"
-                name="demo[]"
+                name="configurable-appliance[]"
                 accept="audio/*"
                 maxFileSize="1000000"
                 (onUpload)="onAudioUpload($event)"
@@ -192,7 +192,7 @@
                 <p-fileUpload
                     #fubauto
                     mode="basic"
-                    name="demo[]"
+                    name="configurable-appliance[]"
                     accept="image/*"
                     maxFileSize="1000000"
                     (onUpload)="onBasicUploadAuto($event)"
@@ -207,7 +207,7 @@
                 <p-fileUpload
                   #fubauto
                   mode="basic"
-                  name="demo[]"
+                  name="configurable-appliance[]"
                   accept="image/*"
                   maxFileSize="1000000"
                   (onUpload)="onBasicUploadAuto($event)"
