Task #212814 fix: change input box with text area and remove delete button

--- a/src/app/configurable-appliance/components/config-app/story-list/add-or-edit-story/add-or-edit-story.component.html
+++ b/src/app/configurable-appliance/components/config-app/story-list/add-or-edit-story/add-or-edit-story.component.html
@@ -65,14 +65,15 @@
 
       <div class="field">
         <label for="description">{{ "Description" }} </label>
-        <input
+        <textarea
           type="text"
           name="description"
           pInputText
           id="description"
           placeholder="{{ 'Enter description' }}"
           formControlName="description"
-        />
+          rows="3"
+        ></textarea>
       </div>
 
 
