--- a/src/app/configurable-appliance/components/config-app/word-sentence/word-sentence.component.html
+++ b/src/app/configurable-appliance/components/config-app/word-sentence/word-sentence.component.html
@@ -141,7 +141,7 @@
                                 ></p-columnFilter>
                             </div>
                         </th>
-                        <th style="min-width: 10rem"></th>
+                        <th style="min-width: 5rem"> Actions</th>
 
                     </tr>
                 </ng-template>
@@ -173,7 +173,7 @@
                        
 						<td style="text-align: center">
 							<button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" (click)="editWorkAndSentence(wordAndSentence)"></button>
-							<button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="deleteWorkAndSentence(wordAndSentence)"></button>
+							<!-- <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="deleteWorkAndSentence(wordAndSentence)"></button> -->
                         </td>
                     </tr>
                 </ng-template>
