--- a/src/app/configurable-appliance/components/config-app/story-list/story-list.component.html
+++ b/src/app/configurable-appliance/components/config-app/story-list/story-list.component.html
@@ -4,7 +4,7 @@
         <div class="card">
             <h5>Stories List</h5>
             <p-table
-                #dt1
+                #dt
                 [value]="storyList"
                 dataKey="id"
                 [rows]="10"
@@ -190,7 +190,7 @@
                         <td style="text-align: center">
 							<button pButton pRipple icon="pi pi-plus" class="p-button-rounded p-button-secondary mr-2" (click)="addWord(story)"></button>
 							 <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" (click)="editStory(story)"></button>
-							<button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger mr-2" (click)="deleteProduct(story)"></button>
+							<!-- <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger mr-2" (click)="deleteProduct(story)"></button> -->
 
                         </td>
                     </tr>
