Feature #212882 fix: Authentication for admin config app and Logout

--- a/src/app/configurable-appliance/components/access-forbidden/access-forbidden.component.html
+++ b/src/app/configurable-appliance/components/access-forbidden/access-forbidden.component.html
@@ -2,15 +2,15 @@
     <div class="flex flex-column align-items-center justify-content-center">
         <div style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, rgba(33, 150, 243, 0.4) 10%, rgba(33, 150, 243, 0) 30%);">
             <div class="w-full surface-card py-8 px-5 sm:px-8 flex flex-column align-items-center" style="border-radius:53px">
-                <span class="text-blue-500 font-bold text-3xl">404</span>
-                <h1 class="text-900 font-bold text-3xl lg:text-5xl mb-2">Not Found</h1>
-                <div class="text-600 mb-5">Requested resource is not available.</div>
+                <span class="text-blue-500 font-bold text-3xl">403</span>
+                <h1 class="text-900 font-bold text-3xl lg:text-5xl mb-2">Unauthorized Access</h1>
+                <div class="text-600 mb-5">This page is not accessible to you..</div>
                 <a [routerLink]="['/']" class="w-full flex align-items-center py-5 border-300 border-bottom-1">
-                    <span class="flex justify-content-center align-items-center bg-cyan-400 border-round" style="height:3.5rem; width:3.5rem;">
-                        <i class="text-50 pi pi-fw pi-external-link text-2xl"></i>
+                    <span class="flex justify-content-center align-items-center bg-cyan-400" style="height:3.5rem; width:3.5rem;">
+                        <i class="text-50 pi pi-fw pi-eye-slash text-2xl"></i>
                     </span>
                     <span class="ml-4 flex flex-column">
-                        <span class="text-900 lg:text-xl font-medium mb-0 block">There is no such route.</span>
+                        <span class="text-900 lg:text-xl font-medium mb-0 block">Please log in using the authorised user.</span>
                     </span>
                 </a>
             </div>
