Issue #213651 fix: Add new dialouge for API Host and enable delete

--- a/src/app/configurable-appliance/components/config-app/word-sentence/word-sentence.component.html
+++ b/src/app/configurable-appliance/components/config-app/word-sentence/word-sentence.component.html
@@ -170,6 +170,7 @@
                                 ></textarea>
                               </div>
                             </ng-template>
+                            </td>
                         <td >
                             {{wordAndSentence.tags}}
                         </td>
@@ -227,7 +228,7 @@
                             class="p-button-rounded p-button-success mr-2"
                             (click)="editContent(wordAndSentence)"
                           ></button>
-							<!-- <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="deleteWorkAndSentence(wordAndSentence)"></button> -->
+							<button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="deleteWorkAndSentence(wordAndSentence)"></button>
                         </td>
                     </tr>
                 </ng-template>
