Issue #213651 fix: added url from env config

--- a/src/app/configurable-appliance/components/config-app/global-api-host/global-api-host.component.html
+++ b/src/app/configurable-appliance/components/config-app/global-api-host/global-api-host.component.html
@@ -4,14 +4,14 @@
       <label>
         <input type="radio" formControlName="environment" value="dev"> Development
         <br>
-        <a style="margin-left: 10px;">https://www.learnerai-dev.theall.ai/content-service</a>
+        <a style="margin-left: 10px;">{{devUrl}}</a>
       </label>
     </div>
     <div class="field">
       <label>
         <input type="radio" formControlName="environment" value="prod"> Production
         <br>
-        <a style="margin-left: 10px;">https://www.learnerai.theall.ai/content-service</a>
+        <a style="margin-left: 10px;">{{prodUrl}}</a>
       </label>
     </div>
     <!-- Validation message -->
