Issue #214914 fix: Added rows per Page Options in Pagination for increase the limit

--- a/src/app/configurable-appliance/components/config-app/word-sentence/word-sentence.component.html
+++ b/src/app/configurable-appliance/components/config-app/word-sentence/word-sentence.component.html
@@ -8,6 +8,7 @@
                 [value]="wordAndSentenceData"
                 dataKey="id"
                 [rows]="10"
+                [rowsPerPageOptions]="[10,100,200,300]" 
                 [loading]="loading"
                 [rowHover]="true"
                 styleClass="p-datatable-gridlines"
