Task #215087 Fix: disable the row after delete and Text filter

--- a/src/app/configurable-appliance/components/config-app/story-list/add-sentence-for-story/add-sentence-for-story.component.html
+++ b/src/app/configurable-appliance/components/config-app/story-list/add-sentence-for-story/add-sentence-for-story.component.html
@@ -37,7 +37,19 @@
                     }"
                 ></p-dropdown>
             </div>
-
+            <div class="field">
+                <label for="contentType">{{ "Index" }} *</label>
+                <input
+                    type="number"
+                    name="index"
+                    pInputText
+                    id="index"
+                    autofocus
+                    placeholder="{{ 'Enter Index' }}"
+                    formControlName="index"
+                    min="0"
+                />
+            </div>
             <div class="field">
                 <label for="contentText">{{ "Content Text" }} *</label>
                 <textarea
@@ -58,18 +70,7 @@
                 >
             </div>
 
-            <!-- <div class="field">
-                <label for="contentType">{{ "Index" }} *</label>
-                <input
-                    type="number"
-                    name="index"
-                    pInputText
-                    id="index"
-                    autofocus
-                    placeholder="{{ 'Enter Index' }}"
-                    formControlName="index"
-                />
-            </div> -->
+          
             <!-- <div class="button-row">
                 <label style="margin-top: 10px;" for="contentAudio">{{ "Content Audio" }} </label>
                 <p-fileUpload
