--- a/src/app/configurable-appliance/components/config-app/story-list/story-list.component.html
+++ b/src/app/configurable-appliance/components/config-app/story-list/story-list.component.html
@@ -160,7 +160,7 @@
                     pTemplate="body"
                     let-story
                 >
-                    <tr [pEditableRow]="tutorial">
+                    <tr [pEditableRow]="tutorial" [ngClass]="{'disabled-row': story.deleted}">
                         <td>
                             {{ story.name }}
                         </td>
