--- a/src/app/configurable-appliance/components/config-app/word-sentence/word-sentence.component.html
+++ b/src/app/configurable-appliance/components/config-app/word-sentence/word-sentence.component.html
@@ -231,6 +231,7 @@
                             (click)="editContent(wordAndSentence)"
                           ></button>
 							<button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="deleteWorkAndSentence(wordAndSentence)"></button>
+							<button (click)="clearFilters()" class="p-button p-button-secondary" type="button">Clear Filters</button>
                         </td>
                     </tr>
                 </ng-template>
