--- a/src/app/configurable-appliance/components/config-app/story-list/story-list.component.html
+++ b/src/app/configurable-appliance/components/config-app/story-list/story-list.component.html
@@ -192,6 +192,7 @@
 							<button pButton pRipple icon="pi pi-plus" class="p-button-rounded p-button-secondary mr-2" (click)="addWord(story)"></button>
 							 <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" (click)="editStory(story)"></button>
 							<button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger mr-2" (click)="deleteProduct(story)"></button>
+							<button (click)="clearFilters()" class="p-button p-button-secondary" type="button">Clear Filters</button>
 
                         </td>
                     </tr>
