--- a/src/app/configurable-appliance/components/config-app/story-list/story-list.component.html
+++ b/src/app/configurable-appliance/components/config-app/story-list/story-list.component.html
@@ -148,7 +148,37 @@
                             </div>
                         </th>
 
-                        <th style="min-width: 14rem">
+                        <!-- <th style="min-width: 12rem">
+                            <div
+                                class="flex justify-content-between align-items-center"
+                            >
+                              Created By
+                                <p-columnFilter
+                                    type="text"
+                                    field="createdBy"
+                                    display="menu"
+                                    matchMode="contains"
+                                ></p-columnFilter>
+                            </div>
+                        </th>
+
+                        <th style="min-width: 12rem">
+                            <div
+                                class="flex justify-content-between align-items-center"
+                            >
+                            Updated By
+                                <p-columnFilter
+                                    type="text"
+                                    field="updatedBy"
+                                    display="menu"
+                                    matchMode="contains"
+                                ></p-columnFilter>
+                            </div>
+                        </th> -->
+
+
+
+                         <th style="min-width: 13rem">
                             <div
                             class="flex justify-content-between align-items-center"
                         > Actions
@@ -187,6 +217,14 @@
                             {{ story.collectionId }}
                            
                         </td>
+
+                        <!-- <td>
+                            {{wordAndSentence.createdBy}}
+                        </td>
+
+                        <td>
+                            {{wordAndSentence.updatedBy}}
+                        </td> -->
 
                         <td style="text-align: center">
 							<button pButton pRipple icon="pi pi-plus" class="p-button-rounded p-button-secondary mr-2" (click)="addWord(story)"></button>
