TaskID #224759 feat: Create Target list and Familiarity List

--- a/src/app/configurable-appliance/components/config-app/global-api-host/global-api-host.component.html
+++ b/src/app/configurable-appliance/components/config-app/global-api-host/global-api-host.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form [formGroup]="environmentForm">
+  <form [formGroup]="environmentForm" style="width: 420px;">
     <div class="field">
       <label>
         <input type="radio" formControlName="environment" value="dev"> Development
