--- a/src/app/configurable-appliance/components/config-app/target-list/target-list.component.html
+++ b/src/app/configurable-appliance/components/config-app/target-list/target-list.component.html
@@ -17,14 +17,25 @@
                             <!-- User Input Field -->
                             
                             <div class="filter-item">
+                                <label style="margin-left: 5px;">
+                                  User ID <span class="required">*</span>
+                                </label>
                                 <input 
-                                autofocus 
-                                formControlName="userID"
-                                id="userId" type="text" pInputText placeholder="Enter User ID" />
-                            </div>
+                                  autofocus 
+                                  formControlName="userID"
+                                  id="userId" 
+                                  type="text" 
+                                  pInputText 
+                                  placeholder="Enter User ID" 
+                                />
+                              </div>
+                              
 
                             <!-- Dropdown Field -->
                             <div class="filter-item">
+                                <label style="margin-left: 5px;">
+                                    Language <span class="required">*</span>
+                                  </label>
                                 <p-dropdown 
                                 formControlName="language"
                                 [showClear]="true"
@@ -33,6 +44,7 @@
                                 autofocus
                                 placeholder="Select Language"
                                 optionValue="value"
+                                (onChange)="onChangeLanguage()"
                                
                                   ></p-dropdown>
                             </div>
@@ -63,7 +75,7 @@
 
                 <ng-template pTemplate="header">
                     <tr>
-                        <th id="" style="min-width: 12rem">
+                        <th id="" style="width: 100px;">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
