TaskID #225128 feat: Conflicts resolve

--- a/src/app/configurable-appliance/components/config-app/adaptive-learning/add-udise-code/add-udise-code.component.html
+++ b/src/app/configurable-appliance/components/config-app/adaptive-learning/add-udise-code/add-udise-code.component.html
@@ -33,7 +33,7 @@
             pattern="^\d+$"
             (input)="filterNumbersOnly($event)"
           />
-          <small style="margin-left: 550px; color: lightslategrey;">{{ addUdiseForm.get('udise_code').value?.length || 0 }}/11 characters</small>
+          <!-- <small style="margin-left: 550px; color: lightslategrey;">{{ addUdiseForm.get('udise_code').value?.length || 0 }}/11 characters</small> -->
           
         </div>
         
