TaskID #225128 fix: Added loader in all api calls

--- a/src/app/configurable-appliance/components/config-app/adaptive-learning/adaptive-learning.component.html
+++ b/src/app/configurable-appliance/components/config-app/adaptive-learning/adaptive-learning.component.html
@@ -116,5 +116,10 @@
             </p-table>
         </div>
     </div>
+    <div *ngIf="loading" class="loading-overlay">
+        <div class="spinner-message-container">
+          <p-progressSpinner></p-progressSpinner>
+        </div>
+      </div>
 </div>
 <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
