--- a/src/app/configurable-appliance/components/config-app/target-list/target-list.component.html
+++ b/src/app/configurable-appliance/components/config-app/target-list/target-list.component.html
@@ -143,4 +143,9 @@
             </p-table>
         </div>
     </div>
+    <div *ngIf="loading" class="loading-overlay">
+        <div class="spinner-message-container">
+          <p-progressSpinner></p-progressSpinner>
+        </div>
+      </div>
 </div>
