--- a/src/app/configurable-appliance/components/config-app/story-list/story-list.component.html
+++ b/src/app/configurable-appliance/components/config-app/story-list/story-list.component.html
@@ -46,7 +46,7 @@
                 </ng-template>
                 <ng-template pTemplate="header">
                     <tr>
-                        <th style="min-width: 12rem">
+                        <th id="" style="min-width: 12rem">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -60,7 +60,7 @@
                                 ></p-columnFilter>
                             </div>
                         </th>
-                        <th style="min-width: 12rem">
+                        <th id="" style="min-width: 12rem">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -74,7 +74,7 @@
                                 ></p-columnFilter>
                             </div>
                         </th>
-                        <th style="min-width: 12rem">
+                        <th id="" style="min-width: 12rem">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -88,7 +88,7 @@
                                 ></p-columnFilter>
                             </div>
                         </th>
-                        <th style="min-width: 14rem">
+                        <th id="" style="min-width: 14rem">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -103,7 +103,7 @@
 
                             </div>
                         </th>
-                        <th pSortableColumn="createdAt" style="min-width: 12rem">
+                        <th id="" pSortableColumn="createdAt" style="min-width: 12rem">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -118,7 +118,7 @@
                                 ></p-columnFilter>
                             </div>
                         </th>
-                        <th pSortableColumn="updatedAt" style="min-width: 12rem">
+                        <th id="" pSortableColumn="updatedAt" style="min-width: 12rem">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -134,7 +134,7 @@
                                 ></p-columnFilter>
                             </div>
                         </th>
-                        <th style="min-width: 12rem">
+                        <th id="" style="min-width: 12rem">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -178,7 +178,7 @@
 
 
 
-                         <th style="min-width: 13rem">
+                         <th id="" style="min-width: 13rem">
                             <div
                             class="flex justify-content-between align-items-center"
                         > Actions
@@ -247,6 +247,11 @@
                     </tr>
                 </ng-template>
             </p-table>
+        </div>
+    </div>
+    <div *ngIf="loading" class="loading-overlay">
+        <div class="spinner-message-container">
+          <p-progressSpinner></p-progressSpinner>
         </div>
     </div>
 </div>
