--- a/src/app/configurable-appliance/components/config-app/word-sentence/word-sentence.component.html
+++ b/src/app/configurable-appliance/components/config-app/word-sentence/word-sentence.component.html
@@ -50,7 +50,7 @@
                 </ng-template>
                 <ng-template pTemplate="header">
                     <tr>
-                        <th style="min-width: 12rem">
+                        <th id="" style="min-width: 12rem">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -65,7 +65,7 @@
                             </div>
                         </th>
 
-                        <th style="min-width: 12rem">
+                        <th id="" style="min-width: 12rem">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -105,7 +105,7 @@
                                 ></p-columnFilter>
                             </div>
                         </th> -->
-                        <th style="min-width: 12rem">
+                        <th id="" style="min-width: 12rem">
                             <p-columnFilter matchMode="contains" field="contentType" [showMenu]="false">
                                 <ng-template pTemplate="filter" let-value let-filter="filterCallback">
                                     <div class="flex justify-content-between align-items-center dropdown-container">
@@ -126,7 +126,7 @@
                                 </ng-template>
                             </p-columnFilter>
                         </th>
-                        <th style="min-width: 12rem">
+                        <th id="" style="min-width: 12rem">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -141,7 +141,7 @@
                             </div>
                         </th>
                       
-                        <th style="min-width: 12rem">
+                        <th id="" style="min-width: 12rem">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -184,7 +184,7 @@
                                 ></p-columnFilter>
                             </div>
                         </th> -->
-                        <th style="min-width: 10rem"> Actions</th>
+                        <th id="" style="min-width: 10rem"> Actions</th>
 
                     </tr>
                 </ng-template>
@@ -256,7 +256,6 @@
                         </td> -->
                        
 						<td style="text-align: center">
-							<!-- <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-danger mr-2" (click)="editWorkAndSentence(wordAndSentence)"></button> -->
                             <button
                             *ngIf="!wordAndSentence.isEditing"
                             pButton
@@ -292,5 +291,10 @@
             </p-table>
         </div>
     </div>
+    <div *ngIf="loading" class="loading-overlay">
+        <div class="spinner-message-container">
+          <p-progressSpinner></p-progressSpinner>
+        </div>
+      </div>
 </div>
 <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
